--- a/substrate/frame/contracts/Cargo.toml
+++ b/substrate/frame/contracts/Cargo.toml
@@ -19,6 +19,7 @@ targets = ["x86_64-unknown-linux-gnu"]
 
 [dependencies]
 paste = { workspace = true }
+polkavm = { workspace = true }
 bitflags = { workspace = true }
 codec = { features = [
 	"derive",
